# preliminary_python_kafka

./: .gitignore  README.md  __main__.py  docker-compose.yml  main.py  pyproject.toml  text.txt  tox.ini
.github/workflows/: ci.yml
.test_configs/: .flake8  .pylintrc
configs/: configs.py
consumer_module/: __main__.py
core/: consumers.py  logger.py  producers.py
main_module/: __main__.py  old_main.py
producer_module/: __main__.py
python_kafka/: __main__.py  main.py
python_kafka/configs/: configs.py
python_kafka/core/: consumers.py  logger.py  producers.py  singleton.py
python_kafka/core/cli/: README.md  parse.py
python_kafka/core/kafka/: README.md
python_kafka/core/kafka/admin/: admin.py  admin_builder.py
python_kafka/core/kafka/consumer/: consumer.py  consumer_builder.py
python_kafka/core/kafka/producer/: producer.py  producer_builder.py
tests/integration_tests/: test_producer.py
tests/unit-tests/: test_logger.py
tests/unit_tests/: test_logger.py  test_producer_builder.py
